cmake_minimum_required(VERSION 3.7)

project(Arkanoid LANGUAGES C)

include_directories(${PROJECT_NAME}/headers)
include_directories(${PROJECT_NAME}/sources)
include_directories(${PROJECT_NAME}/public)

IF (MSVC)
	set (CMAKE_PREFIX_PATH "c:/sdl2")
ENDIF()

find_package(SDL2 REQUIRED)

add_executable(${PROJECT_NAME}
    "./arkanoid.c";
    "./headers/ball.h"
    "./headers/ship.h"
    "./headers/gui_brick.h"
    "./headers/round.h"
    "./sources/ball.c"
    "./sources/ship.c"
    "./sources/gui_brick.c"
    "./sources/round.c"

    )

target_sources(${PROJECT_NAME} PUBLIC arkanoid.c)
target_include_directories(${PROJECT_NAME} PUBLIC ${SDL2_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${SDL2_LIBRARIES})

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/public/sprites.bmp
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/public)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/public/Arkanoid_sprites.bmp
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/public)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/public/Arkanoid_ascii.bmp
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/public)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/public/mur.txt
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/public)

IF (MSVC)
	file(COPY ${SDL2_LIBDIR}/SDL2.dll
		DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release/)
	file(COPY ${SDL2_LIBDIR}/SDL2.dll
		DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug/)
	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
ENDIF()
